projectxx/broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
  namespace: projectxx
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: jc40/broadcaster:1.0.0
