projectxx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectxx
  namespace: projectxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectxx
  template:
    metadata:
      labels:
        app: projectxx
    spec:
      volumes:
        - name: shared-file-projectxx
          persistentVolumeClaim:
            claimName: projectxx-claim
      containers:
        - name: projectxx
          image: PROJECTXX/IMAGE
          volumeMounts:
            - name: shared-file-projectxx
              mountPath: /usr/src/app/image
        - name: todo
          image: TODO/IMAGE
